Fix off-by-one error in aligned neuron interpolation diagram

--- a/static/style.css
+++ b/static/style.css
@@ -39,3 +39,8 @@ d-figure > figure {
   top: 26px;
   left: -48px;
 }
+
+.styled-canvas > canvas {
+  border-radius: 3px;
+  box-shadow: 0px 0px 2px rgba(0,0,0,0.3);
+}
